Inserir quase pronto

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -37,6 +37,9 @@
           <li>
             <a href="#">Contact</a>
           </li>
+          <li>
+            <a href="inserir.html">Inserir</a>
+          </li>
         </ul>
         <h3 class="text-muted">teste</h3>
       </div>
@@ -79,6 +82,10 @@
     <!-- endbuild -->
     
     <!-- build:js scripts/plugins.js -->
+
+    <script src="/bower_components/angular/angular.js"></script>
+    <script src="/bower_components/angular-route/angular-route.js"></script>
+
     <script src="/bower_components/bootstrap/js/affix.js"></script>
     <script src="/bower_components/bootstrap/js/alert.js"></script>
     <script src="/bower_components/bootstrap/js/dropdown.js"></script>
